# Human-Git

./: .aider.conf.yml  .gitignore  CREDITS.md  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: codeql.yml  junie.yml.back  rust.yml
CodeReview/: CODE_REVIEW_v0.1.0-alpha.10-pre-1.md  CODE_REVIEW_v0.1.0-alpha.10-pre-2.md  CODE_REVIEW_v0.1.0-alpha.11-pre-1.md  CODE_REVIEW_v0.1.0-alpha.11.md  CODE_REVIEW_v0.1.0-alpha.7.md  CODE_REVIEW_v0.1.0-alpha.8-pre-7.md  CODE_REVIEW_v0.1.0-alpha.9.md  DEMO-TODO.md  v0.1.0-alpha.8-TODO.md  v0.1.0-alpha.8-plan.md
capabilities/: main.json
icons/: icon.icns
src/: main.rs
src/app/desktop/: gui.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json
src/app/desktop/css/: base.css  components.css  logs.css  panels.css  style.css
src/app/desktop/ts/: gui.ts
src/app/desktop/ts/modules/: El.ts  background.ts  buttons.ts  leftUI.ts  listener.ts  log.ts  (+1 more)
src/modules/: watcher.rs
src/modules/git/: executor.rs
src/modules/operations/: add.rs  commit.rs  commit_and_push.rs  fetch.rs  init.rs  open_folder.rs  process_mutation.rs  pull.rs  push.rs  remote.rs  run_shadow_commit.rs  run_shadow_sync.rs  tag.rs
src/modules/operations/tag_operation/: create_tag.rs  delete_tag.rs  push_tag.rs
src/modules/repo/: diff.rs  history.rs
src/modules/shared/utils/: color.rs  db.rs  schema.sql  utils.rs
src/modules/signing/: gpg.rs  ssh.rs
src/modules/ui_bridge/: handlers.rs
(+73 files in other folders)
